# test-kosuke-15

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  knip.config.ts  middleware.ts  package.json  tickets.md  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
.cursor/rules/: design.mdc  general.mdc  seo.mdc
.github/: PULL_REQUEST_TEMPLATE.md  claude-system-prompt.txt  dependabot.yml  release.yml
.github/scripts/: cleanup-neon-branch.mjs
.github/workflows/: ci.yml  claude.yml  neon-cleanup.yml  on-main.yml  on-tag.yml  shadcn.yml
.husky/: pre-commit
__tests__/: middleware.test.ts
__tests__/api/billing/webhook/: route.test.ts
__tests__/hooks/: use-auth-actions.test.tsx  use-mobile.test.tsx  use-orders.test.tsx  use-subscription-actions.test.tsx  use-subscription-data.test.tsx  use-table-filters.test.ts  use-table-pagination.test.ts  use-table-row-selection.test.ts  use-table-search.test.ts  use-table-sorting.test.ts  use-tasks.test.tsx
__tests__/lib/: utils.test.ts
__tests__/lib/auth/: utils.test.ts
__tests__/lib/billing/: cron-sync.test.ts  eligibility.test.ts  operations.test.ts  stripe-sync.test.ts  subscription.test.ts
__tests__/lib/trpc/routers/: billing.test.ts  user.test.ts
__tests__/setup/: factories.ts  mocks.ts
app/: globals.css  layout.tsx  robots.ts  sitemap.ts
app/(logged-in)/: layout.tsx  loading.tsx
app/(logged-in)/settings/: layout.tsx  page.tsx
app/(logged-in)/settings/billing/: page.tsx
app/(logged-out)/: page.tsx
app/(logged-out)/home/: page.tsx
app/(logged-out)/home/components/: navbar.tsx  tech-card.tsx
app/(logged-out)/home/data/: technologies.ts
app/(logged-out)/onboarding/: page.tsx
app/api/billing/webhook/: route.ts
components/: app-sidebar.tsx  create-org-dialog.tsx  dynamic-breadcrumb.tsx  home.tsx  nav-user.tsx  providers.tsx  sidebar-org-switcher.tsx
components/charts/: shadcn-charts.tsx
docs/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  versions.json
docs/blog/: 2025-10-14-welcome.md  authors.yml  tags.yml
docs/docs/: deployment-guide.md  intro.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/versioned_docs/version-1.2.0/: deployment-guide.md
docs/versioned_docs/version-1.3.0/: intro.md
docs/versioned_docs/version-1.4.0/: deployment-guide.md
emails/: welcome.tsx
engine/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
engine/src/api/: __init__.py  currency.py
engine/tests/: test_main.py
hooks/: use-active-organization.ts  use-auth-actions.ts  use-create-organization.ts  use-notification-settings.ts  use-orders.ts  use-org-invitation.ts  use-org-members.ts  use-organization-logo.ts  use-organizations.ts  use-profile-image.tsx  use-profile-upload.ts  use-subscription-actions.ts  use-subscription-data.ts  use-table-filters.ts  use-table-pagination.ts  use-table-row-selection.ts  use-table-search.ts  use-table-sorting.ts  use-tasks.ts  use-update-organization.ts  use-user-avatar.ts
lib/: utils.ts
lib/api/: index.ts  responses.ts
lib/auth/: constants.ts  index.ts  user-sync.ts  utils.ts
lib/billing/: client.ts  config.ts  cron-sync.ts  eligibility.ts  index.ts  operations.ts  stripe-sync.ts  subscription.ts
lib/db/: drizzle.ts  schema.ts
lib/db/migrations/: 0000_smart_kat_farrell.sql  0001_big_namora.sql  0002_lovely_morbius.sql  0003_fearless_newton_destine.sql
lib/db/scripts/: db-reset.ts  db-seed.ts
lib/email/: index.ts
lib/email/templates/: index.ts
lib/engine/: index.ts
lib/organizations/: index.ts  sync.ts  utils.ts
lib/trpc/: client.ts  init.ts  router.ts  server.ts
lib/trpc/routers/: billing.ts  engine.ts  orders.ts  organizations.ts  tasks.ts  user.ts
lib/trpc/schemas/: billing.ts  engine.ts  orders.ts  organizations.ts  tasks.ts  user.ts
lib/types/: billing.ts  engine.ts  index.ts  order.ts  organization.ts  task.ts  user.ts  webhooks.ts
store/: use-view-mode.ts
(+36 files in other folders)
